--- a/00_workbook/01_effective_c/07_data_types.ipynb
+++ b/00_workbook/01_effective_c/07_data_types.ipynb
@@ -61,10 +61,71 @@
     "21. derived types (pointers, arrays, type definitions, structs, unions).\n",
     "    - Pointer type - this is derviced from the function or object type that it points to, called the referenced type. (`*` is called the indirection operator and its use to dereference a pointer, `&` is called the address-of operator and is used to reference a pointer.\n",
     "    - Array type - a contiguously allocated sequence of objects that have the same designated element type.\n",
+    "    - Type definitions - these are aliases for other types.\n",
+    "    - Structures - These contain sequentially allocated memory objects of different types.\n",
+    "    - Union types - These define a series of types, but the object can only contain one type at a time.\n",
     "\n",
     "There are more types in special header files. like `stdint.h`, `inttypes.h`, `stdbool.h`. some limits are specified in `limits.h`.\n",
     "\n",
-    "In C, a function with an empty parameter list means it accepts ANY number of arguments of ANY type. So you need to specifically give it a `void` parameter to denote that it accepts no parameters."
+    "In C, a function with an empty parameter list means it accepts ANY number of arguments of ANY type. So you need to specifically give it a `void` parameter to denote that it accepts no parameters.\n",
+    "\n",
+    "## typedefs\n",
+    "\n",
+    "You can use typedefs to declare aliases for types.\n",
+    "\n",
+    "You can do this three ways:\n",
+    "1. typedef for a variable type alias\n",
+    "    - typedef signed char schar_t;\n",
+    "\n",
+    "2. typedef for a pointer type alias\n",
+    "    - typedef signed char *schar_p;\n",
+    "  \n",
+    "3. typedef for a function type alias\n",
+    "    - typedef signed char (*schar_fd)(void);\n",
+    "\n",
+    "## structures\n",
+    "\n",
+    "The following declares a struct type with an alias sigline, and a pointer alias `sigline_p`.\n",
+    "```c\n",
+    "struct {\n",
+    "    int signum;\n",
+    "    char signame[20];\n",
+    "    char sigdesc[100];\n",
+    "} sigline, *sigline_p;\n",
+    "```\n",
+    "\n",
+    "## Tags\n",
+    "\n",
+    "Tags are a special way of declaring structs and union types.\n",
+    "\n",
+    "```c\n",
+    "struct Person {\n",
+    "    int age;\n",
+    "    char name[100] name;\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "In the above, `Person` is a tag. We can declare a `Person` object as follows:\n",
+    "\n",
+    "```c\n",
+    "struct Person lusayo;\n",
+    "lusayo.age = 27;\n",
+    "lusayo.name = \"Lusayo\";\n",
+    "```\n",
+    "\n",
+    "You can combine typedefs and structs to make essentially named types:\n",
+    "\n",
+    "```c\n",
+    "typedef struct {\n",
+    "    int age;\n",
+    "    int name;\n",
+    "} Person;\n",
+    "\n",
+    "Person angelise;\n",
+    "\n",
+    "angelise.age = 11;\n",
+    "angelise.name = \"Angelise\";\n",
+    "```"
    ]
   },
   {
