Completed chapter 2 exercises.

--- a/00_workbook/01_effective_c/07_data_types.ipynb
+++ b/00_workbook/01_effective_c/07_data_types.ipynb
@@ -33,7 +33,9 @@
   {
    "cell_type": "markdown",
    "id": "3e0c35af-a2b5-4c55-9b56-dfbddc81567b",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# Notes\n",
     "\n",
@@ -125,16 +127,14 @@
     "\n",
     "angelise.age = 11;\n",
     "angelise.name = \"Angelise\";\n",
-    "```"
+    "```\n",
+    "\n",
+    "## Type Qualifiers\n",
+    "\n",
+    "1. const - a qualifier that restricts redeclarations.\n",
+    "2. volatile - a qualifier for locations in memory that may be modified without the compiler's knowledge. These are memory locations that map to input/output ports and input ports like the system clock.\n",
+    "3. restrict - this is used to promote optimization."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "69700653-8468-421a-aaa9-dbf7dad72a7c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
