implemented static array.

--- a/02_data_structures_and_algorithms/notes/01_data_structures/02_case_studies/01_static_arrays/c_kernel.ipynb
+++ b/02_data_structures_and_algorithms/notes/01_data_structures/02_case_studies/01_static_arrays/c_kernel.ipynb
@@ -18,24 +18,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "71870535-c853-49f6-8cb5-320b9530f306",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Executing your code.\n",
-      "Running tests."
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe kernel failed to start due to the missing module 'jupyter_c_kernel'. Consider installing this module.\n",
+      "\u001b[1;31mClick <a href='https://aka.ms/kernelFailuresMissingModule'>here</a> for more info."
      ]
     }
    ],
    "source": [
     "#include <stdio.h>\n",
+    "#include <math.h>\n",
     "\n",
     "void runTests() {\n",
     "    printf(\"\\nRunning tests.\");\n",
+    "    printf(\"\\n%d\\n\", pow(2, 3));\n",
     "}\n",
     "// ⚠️ DO NOT EDIT ANYTHING ABOVE THIS.\n",
     "\n",
