--- a/02_data_structures_and_algorithms/02_workbook/01_adts/02_dynamic_arrays/notebook.ipynb
+++ b/02_data_structures_and_algorithms/02_workbook/01_adts/02_dynamic_arrays/notebook.ipynb
@@ -5,25 +5,33 @@
    "id": "c77d6cb3",
    "metadata": {},
    "source": [
+    "# Dynamic Array\n",
+    "\n",
     "A Dynamic Array is a linear ADT that combines the benefits of an index-based storage model with the ability to dynamically resize itself. It's often referred to as a resizable array, vector (in C++), or ArrayList (in Java).\n",
     "\n",
-    "1. Underlying Storage Model\n",
+    "## 1. Underlying Storage Model\n",
     "Like a static array, a dynamic array is built on an index-based storage model. It stores its elements in a contiguous block of memory, which allows for fast, random access using an index.\n",
     "\n",
-    "2. Constraints\n",
+    "## 2. Constraints\n",
     "The dynamic array ADT imposes the same constraints as a static array, with one crucial difference:\n",
     "\n",
-    "Logical vs. Physical Size: It maintains both a logical size (the number of elements currently in the array) and a physical size (the total capacity of the underlying memory block). This allows it to handle changes in size without the rigid limitations of a static array.\n",
+    "- Logical vs. Physical Size: It maintains both a logical size (the number of elements currently in the array) and a physical size (the total capacity of the underlying memory block). This allows it to handle changes in size without the rigid limitations of a static array.\n",
     "\n",
-    "Homogeneity: All elements must be of the same data type.\n",
+    "- Homogeneity: All elements must be of the same data type.\n",
     "\n",
-    "3. Operations\n",
+    "## 3. Operations\n",
     "A dynamic array supports all the operations of a static array, but it also includes a key precomputation technique that allows for efficient resizing.\n",
     "\n",
-    "a. Access and Retrieval (Direct Query)\n",
-    "The get(index) and set(index, value) operations work identically to a static array. They provide constant-time access because the memory address is calculated directly from the index.\n",
+    "a. Access and Retrieval\n",
     "\n",
-    "b. Insertion and Deletion (with a key optimization)\n",
+    "- get(index): Returns the value at a specified index. This is a direct query because the memory address can be calculated instantly using the formula: start_address + index * element_size.\n",
+    "\n",
+    "- set(index, value): Updates the value at a specified index. This is also a direct, constant-time operation.\n",
+    "\n",
+    "b. Navigation\n",
+    "traverse(): Iterates through all elements from the beginning to the end. This is a form of linear navigation, typically performed using a single pointer or index.\n",
+    "\n",
+    "c. Insertion and Deletion\n",
     "insert(value): When an element is added and the logical size exceeds the physical size, the dynamic array performs a resizing precomputation. This involves:\n",
     "\n",
     "Creating a new, larger static array (often double the current physical size).\n",
@@ -34,10 +42,7 @@
     "\n",
     "delete(): Deleting an element is similar to a static array, as it requires shifting elements to fill the gap. Some dynamic arrays may also perform a resizing operation to reduce their size if the logical size drops below a certain threshold.\n",
     "\n",
-    "While a single insertion that triggers a resize is a slow operation, these resizes are infrequent. This amortized analysis makes the dynamic array a practical and efficient ADT for most applications.\n",
-    "\n",
-    "c. Navigation\n",
-    "traverse(): Just like a static array, you can iterate through the elements from start to finish, which is a form of linear navigation."
+    "While a single insertion that triggers a resize is a slow operation, these resizes are infrequent. This amortized analysis makes the dynamic array a practical and efficient ADT for most applications.\n"
    ]
   },
   {
