--- a/02_data_structures_and_algorithms/02_workbook/01_adts/03_singly_linked_lists/notebook.ipynb
+++ b/02_data_structures_and_algorithms/02_workbook/01_adts/03_singly_linked_lists/notebook.ipynb
@@ -16,8 +16,8 @@
     "\n",
     "3. Operations\n",
     "\n",
-    "a. Access and Retrieval (Direct Query)\n",
-    "The get(index) and set(index, value) operations work identically to a static array. They provide constant-time access because the memory address is calculated directly from the index.\n",
+    "a. Retrieval and Updates\n",
+    "The pop() and set(index, value) operations work identically to a static array. They provide constant-time access because the memory address is calculated directly from the index.\n",
     "\n",
     "b. Insertion and Deletion (with a key optimization)\n",
     "insert(value): When an element is added and the logical size exceeds the physical size, the dynamic array performs a resizing precomputation. This involves:\n",
