--- a/02_data_structures_and_algorithms/02_workbook/01_adts/03_singly_linked_lists/notebook.ipynb
+++ b/02_data_structures_and_algorithms/02_workbook/01_adts/03_singly_linked_lists/notebook.ipynb
@@ -35,11 +35,69 @@
     "c. Navigation\n",
     "traverse(): Just like a static array, you can iterate through the elements from start to finish, which is a form of linear navigation."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "62c040ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, World!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# implementation\n",
+    "\n",
+    "class Node:\n",
+    "    def __init__(self, value, next: type['Node']=None):\n",
+    "        self.value = value\n",
+    "        self.next = next\n",
+    "\n",
+    "\n",
+    "class SinglyLinkedList:\n",
+    "    def __init__(self, root: Node = None):\n",
+    "        self.root: Node = root\n",
+    "        self.last: Node = root\n",
+    "\n",
+    "    def append(self, node: Node):\n",
+    "        self.last.next = node\n",
+    "        self.last = node\n",
+    "\n",
+    "\n",
+    "print(\"Hello, World!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "62d99f97",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv (3.12.3)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
