Implemented core ADTs for linked list.

--- a/02_data_structures_and_algorithms/02_workbook/01_adts/01_static_arrays/notebook.ipynb
+++ b/02_data_structures_and_algorithms/02_workbook/01_adts/01_static_arrays/notebook.ipynb
@@ -29,12 +29,9 @@
     "b. Navigation\n",
     "traverse(): Iterates through all elements from the beginning to the end. This is a form of linear navigation, typically performed using a single pointer or index.\n",
     "\n",
-    "c. Insertion and Deletion (Inefficient)\n",
-    "While possible, inserting or deleting an element from a static array is generally an expensive process due to the fixed-size constraint. These operations are not efficient because they violate the array's contiguous memory constraint and require moving many elements, often leading to a complete reallocation and copy if the array needs to be resized. This is where other data structures, like linked lists, excel.\n",
+    "c. Insertion and Deletion\n",
     "\n",
-    "- insert(index, value): To insert a new element, you must first shift all subsequent elements to make room, and then place the new element. This can involve many data movements.\n",
-    "\n",
-    "- delete(index): To delete an element, you must shift all subsequent elements back to fill the empty space."
+    "Strictly speaking, static arrays do not support insertion and deletion because a static array has a fixed size at compile time."
    ]
   },
   {
@@ -46,8 +43,16 @@
    "source": [
     "# implementation\n",
     "\n",
-    "## In python, we don't have static arrays. We just use the `list` data type which is a dynamic array."
+    "## In python, we don't have static arrays. We just use the `tuple` data type."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ac259890",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
