--- a/02_data_structures_and_algorithms/02_workbook/01_adts/02_dynamic_arrays/notebook.ipynb
+++ b/02_data_structures_and_algorithms/02_workbook/01_adts/02_dynamic_arrays/notebook.ipynb
@@ -32,17 +32,12 @@
     "traverse(): Iterates through all elements from the beginning to the end. This is a form of linear navigation, typically performed using a single pointer or index.\n",
     "\n",
     "c. Insertion and Deletion\n",
-    "insert(value): When an element is added and the logical size exceeds the physical size, the dynamic array performs a resizing precomputation. This involves:\n",
+    "- insert(index, value): To insert a new element, you must first shift all subsequent elements to make room, and then place the new element. This can involve many data movements. When an element is added and the logical size exceeds the physical size, the dynamic array performs a resizing precomputation. While a single insertion that triggers a resize is a slow operation, these resizes are infrequent. This amortized analysis makes the dynamic array a practical and efficient ADT for most applications. This resizing operation involves:\n",
+    "    - Creating a new, larger static array (often double the current physical size).\n",
+    "    - Copying all the elements from the old array to the new one.\n",
+    "    - Inserting the new element.\n",
     "\n",
-    "Creating a new, larger static array (often double the current physical size).\n",
-    "\n",
-    "Copying all the elements from the old array to the new one.\n",
-    "\n",
-    "Inserting the new element.\n",
-    "\n",
-    "delete(): Deleting an element is similar to a static array, as it requires shifting elements to fill the gap. Some dynamic arrays may also perform a resizing operation to reduce their size if the logical size drops below a certain threshold.\n",
-    "\n",
-    "While a single insertion that triggers a resize is a slow operation, these resizes are infrequent. This amortized analysis makes the dynamic array a practical and efficient ADT for most applications.\n"
+    "- delete(index): Deleting an element requires shifting elements to fill the gap. Some dynamic arrays may also perform a resizing operation to reduce their size if the logical size drops below a certain threshold.\n"
    ]
   },
   {
