--- a/02_data_structures_and_algorithms/02_workbook/01_adts/03_singly_linked_lists/notebook.ipynb
+++ b/02_data_structures_and_algorithms/02_workbook/01_adts/03_singly_linked_lists/notebook.ipynb
@@ -8,7 +8,8 @@
     "A Singly Linked List is a linear ADT that utilizes the pointer-based storage model to group an ordered series of elements in a non-contiguous block of memory.\n",
     "\n",
     "1. Underlying Storage Model\n",
-    "A singly linked list is based on an index-based storage model. It stores its elements in a non-contiguous block of memory, which allows for fast inserts and deletes.\n",
+    "\n",
+    "A singly linked list is based on an pointer-based storage model. It stores its elements in a non-contiguous block of memory, which allows for fast inserts and deletes.\n",
     "\n",
     "2. Constraints\n",
     "\n",
@@ -17,9 +18,13 @@
     "3. Operations\n",
     "\n",
     "a. Retrieval and Updates\n",
-    "The pop() and set(index, value) operations work identically to a static array. They provide constant-time access because the memory address is calculated directly from the index.\n",
     "\n",
-    "b. Insertion and Deletion (with a key optimization)\n",
+    "- get(index)\n",
+    "\n",
+    "- search(value)\n",
+    "\n",
+    "b. Insertion and Deletion\n",
+    "\n",
     "insert(value): When an element is added and the logical size exceeds the physical size, the dynamic array performs a resizing precomputation. This involves:\n",
     "\n",
     "Creating a new, larger static array (often double the current physical size).\n",
@@ -38,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "62c040ae",
    "metadata": {},
    "outputs": [
@@ -61,24 +66,65 @@
     "\n",
     "class SinglyLinkedList:\n",
     "    def __init__(self, root: Node = None):\n",
-    "        self.root: Node = root\n",
-    "        self.last: Node = root\n",
+    "        self.head: Node = root\n",
+    "    \n",
+    "    def insert_at_beginning(self, data):\n",
+    "        node = Node(data)\n",
+    "        node.next = self.head\n",
+    "        self.head = node\n",
     "\n",
-    "    def append(self, node: Node):\n",
-    "        self.last.next = node\n",
-    "        self.last = node\n",
+    "    def insert_at_end(self, data):\n",
+    "        node = Node(data)\n",
     "\n",
+    "        current = self.head\n",
+    "        \n",
+    "        if current is None:\n",
+    "            self.head = node\n",
+    "            return\n",
     "\n",
-    "print(\"Hello, World!\")"
+    "        while current:\n",
+    "            last = current\n",
+    "            current = current.next\n",
+    "\n",
+    "        last.next = node\n",
+    "\n",
+    "    def insert_after(self, prev_node: Node, data):\n",
+    "        if prev_node is None:\n",
+    "            print(\"The previous node cannot be none\")\n",
+    "            return\n",
+    "\n",
+    "        node = Node(data)\n",
+    "        node.next = prev_node.next\n",
+    "        prev_node.next = node\n",
+    "\n",
+    "    def delete_node(self, key):\n",
+    "        temp = self.head\n",
+    "        if temp is not None and temp.data == key:\n",
+    "            self.head = temp.next\n",
+    "            temp = None\n",
+    "            return\n",
+    "\n",
+    "        prev = None\n",
+    "        while temp is not None and temp.data != key:\n",
+    "            prev = temp\n",
+    "            temp = temp.next\n",
+    "        \n",
+    "        if temp is None:\n",
+    "            return\n",
+    "    \n",
+    "        prev.next = temp.next\n",
+    "        temp = None\n",
+    "\n",
+    "    def search_node(self, key) -> Node:\n",
+    "        current = self.head\n",
+    "\n",
+    "        while current:\n",
+    "            if current.value == key:\n",
+    "                return current\n",
+    "            current = current.next\n",
+    "    \n",
+    "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "62d99f97",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
