--- a/02_data_structures_and_algorithms/02_workbook/04_problems/01_two_sum/notebook.ipynb
+++ b/02_data_structures_and_algorithms/02_workbook/04_problems/01_two_sum/notebook.ipynb
@@ -51,9 +51,21 @@
     ")\n",
     "\n",
     "def twoSum(nums: List[int], target: int) -> List[int]:\n",
-    "    pass\n",
+    "    sorted_list = sorted((num, i) for (i, num) in enumerate(nums))\n",
     "\n",
-    "print(\"This is my two-sum implementation.\")"
+    "    i, j = 0, len(sorted_list) - 1\n",
+    "\n",
+    "    while i < j:\n",
+    "        current_sum = sorted_list[i][0] + sorted_list[j][0]\n",
+    "\n",
+    "        if current_sum == target:\n",
+    "            return [sorted_list[i][1], sorted_list[j][1]]\n",
+    "        elif current_sum < target:\n",
+    "            i += 1\n",
+    "        else:\n",
+    "            j -= 1\n",
+    "        \n",
+    "    return None\n"
    ]
   },
   {
