--- a/02_data_structures_and_algorithms/02_workbook/01_adts/01_static_arrays/notebook.ipynb
+++ b/02_data_structures_and_algorithms/02_workbook/01_adts/01_static_arrays/notebook.ipynb
@@ -29,9 +29,9 @@
     "b. Navigation\n",
     "traverse(): Iterates through all elements from the beginning to the end. This is a form of linear navigation, typically performed using a single pointer or index.\n",
     "\n",
-    "c. Insertion and Deletion\n",
+    "c. Insertion and Deletion (Inefficient)\n",
     "\n",
-    "Strictly speaking, static arrays do not support insertion and deletion because a static array has a fixed size at compile time."
+    "Strictly speaking, static arrays do not have insert and delete operations because their sizes are fixed at compile time.\n"
    ]
   },
   {
@@ -45,14 +45,6 @@
     "\n",
     "## In python, we don't have static arrays. We just use the `tuple` data type."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ac259890",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
