--- a/02_data_structures_and_algorithms/02_workbook/01_adts/03_singly_linked_lists/notebook.ipynb
+++ b/02_data_structures_and_algorithms/02_workbook/01_adts/03_singly_linked_lists/notebook.ipynb
@@ -5,40 +5,36 @@
    "id": "776de2d6",
    "metadata": {},
    "source": [
+    "# Singly Linked List\n",
+    "\n",
     "A Singly Linked List is a linear ADT that utilizes the pointer-based storage model to group an ordered series of elements in a non-contiguous block of memory.\n",
     "\n",
-    "1. Underlying Storage Model\n",
+    "## 1. Underlying Storage Model\n",
     "\n",
     "A singly linked list is based on an pointer-based storage model. It stores its elements in a non-contiguous block of memory, which allows for fast inserts and deletes.\n",
     "\n",
-    "2. Constraints\n",
+    "## 2. Constraints\n",
     "\n",
     "Homogeneity: All elements must be of the same data type.\n",
     "\n",
-    "3. Operations\n",
+    "## 3. Operations\n",
     "\n",
     "a. Retrieval and Updates\n",
     "\n",
-    "- get(index)\n",
-    "\n",
-    "- search(value)\n",
+    "- search_node(key): Use some data value to get the node that holds. This is an O(n) operation.\n",
     "\n",
     "b. Insertion and Deletion\n",
     "\n",
-    "insert(value): When an element is added and the logical size exceeds the physical size, the dynamic array performs a resizing precomputation. This involves:\n",
+    "- insert_at_beginning(data): Insert an element containing data to the beginning of a linked list.\n",
     "\n",
-    "Creating a new, larger static array (often double the current physical size).\n",
+    "- insert_at_end(data): Insert an element containing data to the end of the linked list.\n",
     "\n",
-    "Copying all the elements from the old array to the new one.\n",
+    "- insert_after(key, data): Insert an element containing data right after the element that contains 'key'.\n",
     "\n",
-    "Inserting the new element.\n",
-    "\n",
-    "delete(): Deleting an element is similar to a static array, as it requires shifting elements to fill the gap. Some dynamic arrays may also perform a resizing operation to reduce their size if the logical size drops below a certain threshold.\n",
-    "\n",
-    "While a single insertion that triggers a resize is a slow operation, these resizes are infrequent. This amortized analysis makes the dynamic array a practical and efficient ADT for most applications.\n",
+    "- remove(key): Remove the element that contains 'key' from the linked list.\n",
     "\n",
     "c. Navigation\n",
-    "traverse(): Just like a static array, you can iterate through the elements from start to finish, which is a form of linear navigation."
+    "- traverse(): Go through all elements of the singly linked list in sequence from head to the last element."
    ]
   },
   {
@@ -46,15 +42,7 @@
    "execution_count": null,
    "id": "62c040ae",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello, World!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# implementation\n",
     "\n",
@@ -71,7 +59,7 @@
     "    def insert_at_beginning(self, data):\n",
     "        node = Node(data)\n",
     "        node.next = self.head\n",
-    "        self.head = node\n",
+    "        self.head: Node = node\n",
     "\n",
     "    def insert_at_end(self, data):\n",
     "        node = Node(data)\n",
@@ -79,7 +67,7 @@
     "        current = self.head\n",
     "        \n",
     "        if current is None:\n",
-    "            self.head = node\n",
+    "            self.head: Node = node\n",
     "            return\n",
     "\n",
     "        while current:\n",
@@ -98,14 +86,14 @@
     "        prev_node.next = node\n",
     "\n",
     "    def delete_node(self, key):\n",
-    "        temp = self.head\n",
-    "        if temp is not None and temp.data == key:\n",
+    "        temp: Node = self.head\n",
+    "        if temp is not None and temp.value == key:\n",
     "            self.head = temp.next\n",
     "            temp = None\n",
     "            return\n",
     "\n",
     "        prev = None\n",
-    "        while temp is not None and temp.data != key:\n",
+    "        while temp is not None and temp.value != key:\n",
     "            prev = temp\n",
     "            temp = temp.next\n",
     "        \n",
@@ -121,9 +109,7 @@
     "        while current:\n",
     "            if current.value == key:\n",
     "                return current\n",
-    "            current = current.next\n",
-    "    \n",
-    "\n"
+    "            current = current.next\n"
    ]
   }
  ],
